--- a/index.html
+++ b/index.html
@@ -852,13 +852,12 @@
             }
 
             else if (lobby.phase === 'social') {
+                const botVotes = calculateBotVotes(lobby, isMerge);
                 updates = {
                     phase: 'voting',
-                    votes: {},
+                    votes: botVotes,
                     logs: arrayUnion("È TEMPO DI VOTARE!")
                 };
-                const botVotes = calculateBotVotes(lobby, isMerge);
-                updates.votes = botVotes;
             }
 
             else if (lobby.phase === 'voting') {
@@ -1060,7 +1059,7 @@
 
                 const victim = potentialVictims[Math.floor(Math.random() * potentialVictims.length)];
                 
-                votes[`votes.${bot.uid}`] = victim.uid;
+                votes[bot.uid] = victim.uid; // Correzione: uso chiave diretta per l'oggetto voti
             });
             return votes;
           };
@@ -1187,7 +1186,8 @@
               const voters = isMerge 
                   ? activePlayers 
                   : activePlayers.filter(p => p.team === lobby.losingTeam);
-              return voters.filter(p => !lobby.votes?.[p.uid]).length;
+              // Correzione: Filtro via i bot dal conteggio pending
+              return voters.filter(p => !p.isBot && !lobby.votes?.[p.uid]).length;
           }, [lobby.phase, lobby.votes, isMerge, activePlayers, lobby.losingTeam]);
 
           // --- LOGICA ATTESA SOCIAL ---
@@ -1274,7 +1274,7 @@
                                 className={`${((lobby.phase === 'voting' && pendingVotesCount > 0) || (lobby.phase === 'social' && pendingReadyCount > 0)) ? 'bg-slate-600 text-slate-400 cursor-not-allowed' : 'bg-yellow-500 hover:bg-yellow-400 text-black'} font-black px-4 py-1 rounded shadow text-sm flex items-center gap-2 transition-all`}
                             >
                             {lobby.phase === 'voting' && pendingVotesCount > 0 
-                                ? `ATTESA VOTI (${pendingVotesCount})` 
+                                ? `ATTESA VOTI (UMANI: ${pendingVotesCount})` 
                                 : lobby.phase === 'social' && pendingReadyCount > 0
                                     ? `ATTESA GIOCATORI (${pendingReadyCount})`
                                     : lobby.phase === 'ceremony' 
